// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography should match snapshots body1 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg fcTxbN"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots body2 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg kBTNGw"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots body3 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg YiGGc"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots h1 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg cEjJty"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots head 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg CULoW"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots subtitle 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg cOcjDp"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots title 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg gPSarD"
  >
    Text goes here
  </p>
</DocumentFragment>
`;
